--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>SoftUni-Workshop</title>
 </head>
 
 <body>
-    <h1>Wizzard Game</h1>
+    <!-- <h1>Wizzard Game</h1> -->
+    <div class="game">
+        <div class="start-screen">Press to start</div>
+    </div>
+
+
     <script src="js/main.js"></script>
 </body>
 
