Add empty start screen

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     <!-- <h1>Wizzard Game</h1> -->
     <div class="game">
         <div class="start-screen">Press to start</div>
+        <div class="game-screen hidden"></div>
     </div>
 
 
