Separate login into different files

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,8 @@
 
 
     <script src="js/main.js"></script>
+    <script src="js/gameState.js"></script>
+    <script src="js/gameObject.js</script>
 </body>
 
 </html>
