--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,10 @@
     </div>
 
 
-    <script src="js/main.js"></script>
     <script src="js/gameState.js"></script>
-    <script src="js/gameObject.js</script>
+    <script src="js/gameObject.js"></script>
+    <script src="js/gameEngine.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
